Fixed MLH banner on mobile

--- a/app/assets/stylesheets/home/layout.scss
+++ b/app/assets/stylesheets/home/layout.scss
@@ -129,6 +129,9 @@ body {
   background-size: 700px;
   margin-left: 100px;
   margin-top: 200px;
+  @media (max-width: 1100px) {
+    display: none;
+  }
 }
 
 .about__logo {
